# Nexus

./: README.md  pyproject.toml
agents/: __init__.py  base.py  cto_agent.py  random_agent.py
hf_space_staging/: README.md  __init__.py  openenv.yaml
hf_space_staging/agents/: llm_agent.py  strategic_agent.py
hf_space_staging/nexus/: __init__.py  coalitions.py  config.py  engine.py  journal.py  oversight.py  persistence.py
hf_space_staging/server/: __init__.py  app.py
nexus/: actions.py
nexus_openenv/: README.md  client.py  models.py  pyproject.toml  requirements.txt
nexus_openenv/agents/: greedy_agent.py  supervisor_agent.py
nexus_openenv/nexus/: events.py  market.py  multi_actor.py  observations.py  rewards.py  state.py
nexus_openenv/server/: Dockerfile  nexus_environment.py
notebooks/: nexus_training.ipynb
scripts/: evaluate.py  run_simulation.py  visualize.py
tests/: test_coalitions.py  test_engine.py  test_market.py  test_observations.py  test_openenv.py  test_oversight.py
