[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nexus"
version = "0.1.0"
description = "Multi-agent compute cluster negotiation environment"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "rich>=13.0",
    "typer>=0.9",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pytest>=7.0",
    "openenv>=0.2.1",
    "uvicorn>=0.27",
    "fastapi>=0.100",
]

[project.scripts]
nexus = "scripts.run_simulation:app"

[tool.setuptools.packages.find]
include = ["nexus*", "agents*", "scripts*", "nexus_openenv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
